--- a/partials/header.html
+++ b/partials/header.html
@@ -3,15 +3,15 @@
 
     <!-- شعار الموقع -->
     <div class="site-name">
-      <a href="../index.html">CourseHub</a>
+      <a href="index.html">CourseHub</a>
     </div>
 
     <!-- Navigation -->
     <nav>
-      <a href="../index.html">الرئيسية</a>
-      <a href="../courses.html">الدورات</a>
-      <a href="../tests.html">الاختبارات</a>
-      <a href="../certificates.html">الشهادات</a>
+      <a href="index.html">الرئيسية</a>
+      <a href="courses.html">الدورات</a>
+      <a href="tests.html">الاختبارات</a>
+      <a href="certificates.html">الشهادات</a>
     </nav>
 
     <!-- Search Bar -->
@@ -23,8 +23,10 @@
     <!-- Header Actions -->
     <div class="header-actions">
       <button id="langBtn"><i class="fa fa-globe"></i> عربي</button>
-      <button id="notifBtn"><i class="fa fa-bell"></i><span class="notification-badge" id="notifBadge">0</span></button>
-      <a href="../login.html" id="login-link">تسجيل الدخول</a>
+      <button id="notifBtn"><i class="fa fa-bell"></i>
+        <span class="notification-badge" id="notifBadge">0</span>
+      </button>
+      <a href="login.html" id="login-link">تسجيل الدخول</a>
       <div id="user-info" class="user-info-container"></div>
     </div>
 
