--- a/partials/footer.html
+++ b/partials/footer.html
@@ -8,17 +8,17 @@
 
     <div class="footer-col">
       <h4>روابط سريعة</h4>
-      <a href="../index.html">الرئيسية</a>
-      <a href="../courses.html">الدورات</a>
-      <a href="../tests.html">الاختبارات</a>
-      <a href="../certificates.html">الشهادات</a>
+      <a href="index.html">الرئيسية</a>
+      <a href="courses.html">الدورات</a>
+      <a href="tests.html">الاختبارات</a>
+      <a href="certificates.html">الشهادات</a>
     </div>
 
     <div class="footer-col">
       <h4>الحساب</h4>
-      <a href="../login.html">تسجيل الدخول</a>
-      <a href="../register.html">إنشاء حساب</a>
-      <a href="../my-courses.html">دوراتي</a>
+      <a href="login.html">تسجيل الدخول</a>
+      <a href="register.html">إنشاء حساب</a>
+      <a href="my-courses.html">دوراتي</a>
     </div>
 
     <div class="footer-col">
@@ -41,12 +41,10 @@
   </div>
 
   <script>
-    // ===============================
     // تحديث سنة الحقوق تلقائيًا
-    // ===============================
     document.getElementById("year").textContent = new Date().getFullYear();
   </script>
 
-  <!-- تضمين Font Awesome للأيقونات -->
+  <!-- Font Awesome للأيقونات -->
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </footer>
