--- a/partials/header.html
+++ b/partials/header.html
@@ -8,10 +8,10 @@
 
     <!-- Navigation -->
     <nav>
-      <a href="index.html">الرئيسية</a>
-      <a href="courses.html">الدورات</a>
+      <a href="/index.html">الرئيسية</a>
+      <a href="//courses.html">الدورات</a>
       <a href="tests.html">الاختبارات</a>
-      <a href="certificates.html">الشهادات</a>
+      <a href="/certificates.html">الشهادات</a>
     </nav>
 
     <!-- Search Bar -->
