--- a/partials/header.html
+++ b/partials/header.html
@@ -9,8 +9,8 @@
     <!-- Navigation -->
     <nav>
       <a href="/index.html">الرئيسية</a>
-      <a href="//courses.html">الدورات</a>
-      <a href="tests.html">الاختبارات</a>
+      <a href="/courses.html">الدورات</a>
+      <a href="/tests.html">الاختبارات</a>
       <a href="/certificates.html">الشهادات</a>
     </nav>
 
