--- a/partials/footer.html
+++ b/partials/footer.html
@@ -8,17 +8,17 @@
 
     <div class="footer-col">
       <h4>روابط سريعة</h4>
-      <a href="index.html">الرئيسية</a>
-      <a href="courses.html">الدورات</a>
-      <a href="tests.html">الاختبارات</a>
-      <a href="certificates.html">الشهادات</a>
+      <a href="/index.html">الرئيسية</a>
+      <a href="/courses.html">الدورات</a>
+      <a href="/tests.html">الاختبارات</a>
+      <a href="/certificates.html">الشهادات</a>
     </div>
 
     <div class="footer-col">
       <h4>الحساب</h4>
-      <a href="login.html">تسجيل الدخول</a>
-      <a href="register.html">إنشاء حساب</a>
-      <a href="my-courses.html">دوراتي</a>
+      <a href="/login.html">تسجيل الدخول</a>
+      <a href="/register.html">إنشاء حساب</a>
+      <a href="/my-courses.html">دوراتي</a>
     </div>
 
     <div class="footer-col">
