--- a/partials/header.html
+++ b/partials/header.html
@@ -3,7 +3,7 @@
 
     <!-- شعار الموقع -->
     <div class="site-name">
-      <a href="index.html">CourseHub</a>
+      <a href="/index.html">CourseHub</a>
     </div>
 
     <!-- Navigation -->
