--- a/partials/footer.html
+++ b/partials/footer.html
@@ -40,11 +40,5 @@
     © <span id="year"></span> CourseHub - جميع الحقوق محفوظة
   </div>
 
-  <script>
-    // تحديث سنة الحقوق تلقائيًا
-    document.getElementById("year").textContent = new Date().getFullYear();
-  </script>
-
-  <!-- Font Awesome للأيقونات -->
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+  <!-- Year updated via main.js -->
 </footer>
