--- a/partials/footer.html
+++ b/partials/footer.html
@@ -33,7 +33,7 @@
       </div>
     </div>
 
-    <!-- رابط لوحة الإدارة (يتم حقنه ديناميكيًا من main.js) -->
+      <!-- رابط لوحة الإدارة للأدمن -->
     <div id="admin-link"></div>
 
   </div>
@@ -42,5 +42,6 @@
     © <span id="year"></span> CourseHub - جميع الحقوق محفوظة
   </div>
 
-  <!-- Year & admin link handled via main.js -->
+
+  <!-- Year updated via main.js -->
 </footer>
