--- a/partials/header.html
+++ b/partials/header.html
@@ -8,10 +8,11 @@
 
     <!-- Navigation -->
     <nav>
-      <a href="/index.html">الرئيسية</a>
-      <a href="/courses.html">الدورات</a>
-      <a href="/tests.html">الاختبارات</a>
-      <a href="/certificates.html">الشهادات</a>
+      <a href="/index.html" data-i18n="nav_home">الرئيسية</a>
+      <a href="/courses.html" data-i18n="nav_courses">الدورات</a>
+      <a href="/tests.html" data-i18n="nav_tests">الاختبارات</a>
+      <a href="/achievements.html" data-i18n="nav_achievements">إنجازاتي</a>
+      <a href="/paths.html" data-i18n="nav_paths">المسارات</a>
     </nav>
 
     <!-- Search Bar -->
@@ -22,10 +23,17 @@
 
     <!-- Header Actions -->
     <div class="header-actions">
-      <button id="langBtn"><i class="fa fa-globe"></i> عربي</button>
-      <button id="notifBtn"><i class="fa fa-bell"></i>
-        <span class="notification-badge" id="notifBadge">0</span>
-      </button>
+      <button id="langBtn" data-i18n="lang"><i class="fa fa-globe"></i> عربي</button>
+      <div class="notification-wrapper">
+        <button id="notifBtn" aria-label="الإشعارات"><i class="fa fa-bell"></i>
+          <span class="notification-badge" id="notifBadge">0</span>
+        </button>
+        <div class="notification-menu" id="notificationMenu">
+          <div class="notification-title">الإشعارات</div>
+          <div class="notification-items" id="notificationItems"></div>
+          <a class="notification-footer" href="/notifications.html">عرض كل الإشعارات</a>
+        </div>
+      </div>
       <a href="login.html" id="login-link">تسجيل الدخول</a>
       <div id="user-info" class="user-info-container"></div>
     </div>
